#49: sticky header and horizontal scrollbar fixes
Only sticky position for truly supported browsers (no -webkit prefix) and hide overflow for toolbar to fix horizontal scrollbar

--- a/src/scss/admin/molecules/_scopebar.scss
+++ b/src/scss/admin/molecules/_scopebar.scss
@@ -5,6 +5,7 @@
 
   /**
    * 1. Faking a border for when items are not stretching
+   * 2. Hide horizontal scrollbar
    */
 
   .k-scopebar {
@@ -17,6 +18,7 @@
     width: auto;
     flex: 0 0 auto;
     flex-wrap: wrap;
+    overflow: hidden; /* 2 */
 
     @include breakpoint($k-delta) {
       flex-wrap: nowrap;
